[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
regex = "1"
json = "0.12.4"
termion = "2.0.1"
itertools = "0.10.1"
rayon = "1.6.1"

[[bin]]
name = "adventofcode2022"
path = "src/main.rs"
